Fix minor spacing. Make links open in new tab by default.

--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -73,7 +73,7 @@
       & .projectLink {
         flex-direction: row-reverse;
 
-        & > button {
+        & > a {
           margin-right: 0;
           margin-left: 1.4rem;
 
